outputs/main/reevo-qd_bpp_online_2025-07-25_07-08-07/problem_iter1_response16.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 29
    priority = np.where(non Exact_fit_bins, 1 / (bins_remain_cap + 1e-6), priority)
                        ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
4
1
64.52932501298082
55.58374226588717
67
